--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.0",
+    "handsontable": "^7.4.2",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
