--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.0",
+    "greenlock-express": "^4.0.3",
     "handsontable": "^7.4.2",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nocache": "^2.1.0",
+    "nodemailer": "^6.4.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
