--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.17.1",
     "nocache": "^2.1.0",
     "nodemailer": "^6.4.5",
+    "nodetable": "^1.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
